2019-10-06  6.9.10-69 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-69, GIT revision 14...

2019-10-06  6.9.10-69 Cristy  <quetzlzacatenango@image...>
  * Fixed numerous issues  posted to GitHub (reference
		https://github.com/ImageMagick/ImageMagick/issues).

2019-10-05  6.9.10-68 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-68, GIT revision 14874:eb58b7e:20191005.

2019-09-30  6.9.10-68 Cristy  <quetzlzacatenango@image...>
  * Support animated WebP encoding/decoding (reference
    https://github.com/ImageMagick/ImageMagick/pull/1708).
  * Text stroke cut off (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=36829).

2019-09-29  6.9.10-67 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-67, GIT revision 14844:2a2c1b1:20190929.

2019-09-28  6.9.10-67 Cristy  <quetzlzacatenango@image...>
  * line endings renedered as empty boxes (reference
    https://github.com/ImageMagick/ImageMagick/issues/1704).

2019-09-21  6.9.10-66 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-66, GIT revision 14834:9b20f2e:20190921.

2019-09-20  6.9.10-66 Cristy  <quetzlzacatenango@image...>
  * Support compound statements in the FX while() expression (reference
    https://github.com/ImageMagick/ImageMagick/issues/1701).

2019-09-14  6.9.10-65 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-65, GIT revision 14829:1a6dc73:20190915/

2019-09-09  6.9.10-65 Cristy  <quetzlzacatenango@image...>
  * Eliminate fault when trace delegate is not available.
  * Properly distinquish linear and non-linear gray colorspaces (reference
    https://github.com/ImageMagick/ImageMagick/issues/1680).

2019-09-07  6.9.10-64 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-64, GIT revision 14812:b27c543:20190907.

2019-09-02  6.9.10-64 Cristy  <quetzlzacatenango@image...>
  * Support XPM symbolic (reference